# Reversi

./: CMakeLists.txt  README.md  gitLogFile.txt
exe/: client.out  server.out  setting_client.txt  setting_server.txt
src/: setting_client.txt  setting_server.txt
src/client/include/: Board.h  Cell.h  Client.h  ComputerPlayer.h  ConsolePrinter.h  Coordinate.h  GameManager.h  HumanPlayer.h  Logic.h  NormalLogic.h  Player.h  Printer.h  RemotePlayer.h
src/client/srcReversi/: Board.cpp  Cell.cpp  Client.cpp  ComputerPlayer.cpp  ConsolePrinter.cpp  Coordinate.cpp  GameManager.cpp  HumanPlayer.cpp  Logic.cpp  NormalLogic.cpp  Player.cpp  Printer.cpp  RemotePlayer.cpp  main.cpp
src/server/: ClientHandler.cpp  ClientHandler.h  Command.h  CommandManager.cpp  CommandManager.h  Game.cpp  Game.h  GameInfo.cpp  GameInfo.h  GamesListCommand.cpp  GamesListCommand.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  setting_server.txt
src/tests/: BoardTest.h  ComputerTest.h  LogicTest.h  main_test.cpp  test_Board.cpp  test_ComputerPlayer.cpp  test_Coordinate.cpp  test_NormalLogic.cpp
